--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Early Valentines!</title>
+    <title>Happy Early Valentines</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,6 +12,7 @@
         <input type="text" id="nameInput" placeholder="Enter your name">
         <button onclick="checkName()">Submit</button>
     </div>
-    <script src="script.js" defer></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
